# Algoritmia

Arboles/ArbolEquilibrado/ArbolEquilibrado/: CMakeLists.txt  main.cpp
Arboles/ArbolEquilibradoArreglos/ArbolEquilibradoArreglos/: CMakeLists.txt  main.cpp
Arboles/ArbolVitivinicola/ArbolVitivinicola/: CMakeLists.txt  main.cpp
Arboles/BuscaCaries-2025-2/BuscaCaries-2025-2/: CMakeLists.txt  main.cpp
Arboles/Skynerd-2025-2/Skynerd-2025-2/: CMakeLists.txt  main.cpp
Arboles/arbolPalabras2024.2/: ArbolBinarioPalabras.h  CMakeLists.txt  funcionesArbolBinarioPalabras.cpp  main.cpp
Arboles/lab5261/: CMakeLists.txt  main.cpp
Arboles/lab5261/BibliotecaCola/: ElementoCola.h  funcionesCola.cpp  funcionesCola.h
Arboles/lab5261/BibliotecaPila/: ElementoPila.h  NodoPila.h  funcionesPila.cpp  funcionesPila.h
Arboles/postOrdenABBITERATIVO/: CMakeLists.txt  main.cpp
Divide y venceras/CuentaCeros/CuentaCeros/: CMakeLists.txt  main.cpp
Divide y venceras/Duplas/Duplas/: CMakeLists.txt  main.cpp
Divide y venceras/LabDirigido_06-06/AsesoríaAlgoritmia06-06/: Examen 2_25-1.docx  Examen 2_25-2.docx  (+2 more)
Divide y venceras/MaximoDV/: CMakeLists.txt  main.cpp
Divide y venceras/MergeSort ALLASI/: CMakeLists.txt  main.cpp
Divide y venceras/MergeSort RONCAL/: CMakeLists.txt  main.cpp
Fuerza Bruta/Mochila Básica/: main.cpp
Lab 3/BadSunny 2022.2/: CMakeLists.txt  main.cpp
Lab 3/CribaEratostenes 2022.2/: CMakeLists.txt  main.cpp
Lab 3/Invierte Lista + REC/: CMakeLists.txt  main.cpp
Lab 3/PasaPila/: CMakeLists.txt  main.cpp
Lab 3/Submarino/: CMakeLists.txt  main.cpp
Mis soluciones/2025.1/: CMakeLists.txt  velocidadDiscos.cpp
Mis soluciones/2025.2/: controlesDeSeguridad.cpp  galeriaMina.cpp  mina.cpp
Mis soluciones/2026.1/Lab 2/Pregunta 1/: CMakeLists.txt  main.cpp
Mis soluciones/2026.1/Lab 2/Pregunta 1/BibliotecaLista/: Baraja.h  Carta.h  Estructuras.h  Lista.h  NodoBaraja.h
Mis soluciones/mMerge/: CMakeLists.txt  main.cpp
P2/20251multas/: CMakeLists.txt  main.cpp
P2/20251multas/Bibliotecas/: Empresa.cpp  Empresa.h  Infraccion.cpp  Infraccion.h  MinisterioDeTransporte.cpp  MinisterioDeTransporte.h  Multa.cpp  Multa.h  Vehiculo.cpp  Vehiculo.h
P2/STL-Multas-001/STL-Multas/: CMakeLists.txt  main.cpp
P2/STL-Multas-001/STL-Multas/Biblioteca/: Empresa.cpp  Empresa.h  Infraccion.cpp  Infraccion.h  MinisterioDeTransporte.cpp  MinisterioDeTransporte.h  Multa.cpp  Multa.h  Vehiculo.cpp  Vehiculo.h
P2/Sol_Lab09_25_1/Sol_Lab09_25_1/: CMakeLists.txt  main.cpp
P2/Sol_Lab09_25_1/Sol_Lab09_25_1/Biblioteca/: Empresa.cpp  Empresa.h  Infraccion.cpp  Infraccion.h  MinisterioDeTransporte.cpp  MinisterioDeTransporte.h  Multa.cpp  Multa.h  Vehiculo.cpp  Vehiculo.h
(+72 files in other folders)
